# carteramora

./: .env.example  .gitignore  README.md  Sql_BD_Cobranza.sql  Sql_BD_Cobranza_alter_deuda_deudor.sql  Sql_BD_Cobranza_sqlite.sql  Sql_BD_Cobranza_staging_sqlite.sql  main.py  pyproject.toml
data/: 01_cuadro_morosidad.txt  02_creditos_mora.txt  02_reporte_mora.json  03_reporte_mora.json  reporte_mora.json
destino/: README.md
docs/: BD_Cobranza.mmd  BD_Cobranza_ORM.md  BD_Cobranza_mapeo.mmd  BD_Cobranza_pipeline.mmd  BD_Cobranza_staging.mmd  hu.md
docsmora/: README.md  REPORTE - 2026-06-04T120243.670.xlsx
scripts/: compare_cortes.py
tests/: conftest.py  test_acumulado_fin_mes.py  test_api_pipeline.py  test_asesores_rotacion_repository.py  test_asignacion_calendario.py  test_asignacion_cartera.py  test_asignacion_handler.py  test_asignacion_mensual_repository.py  test_chain.py  test_cobranza_lote_fecha.py  test_cuadro_morosidad.py  test_database_url.py  test_deuda_deudor_mapper.py  test_dias_habiles.py  test_docsmora_resolver.py  test_domain.py  test_encoding_lis.py  test_estado_asesor_deuda.py  test_export_acumulado_mensual.py  test_export_asignacion.py  test_export_asignacion_handler.py  test_fin_de_mes_lectura.py  test_fin_de_mes_sin_asignacion.py  test_lis_excel.py  test_manifiesto_lis.py  test_mapeo_logger.py  test_mora_temprana_service.py  test_notificaciones_errores.py  test_orm_models.py  test_pipeline.py  test_pipeline_chain.py  test_recblue.py  test_reglas_mora.py  test_sqlite_db.py  test_staging.py  test_sync_asesores.py  test_sync_feriados.py  (+4 more)
(+123 files in other folders)
